--- a/vflix/src/index.html
+++ b/vflix/src/index.html
@@ -6,12 +6,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="./assets/js/jquery.min.js" ></script>
-  <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" >
-  <script type="text/javascript" src="./assets/js/bootstrap.min.js" ></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="./assets/js/fontawesome.js" ></script>
   <script type="text/javascript" src="./assets/js/main.js" ></script>
- 
+  
 </head>
 
 <body id="main">
